[package]
name = "arwah"
version = "0.1.0"
edition = "2024"



[dependencies]
clap = { version = "4.5.41", features = ["derive", "wrap_help"] }
colored = "3.0.0"
async-std = "1.13.1"
futures = "0.3"
rlimit = "0.10.2"
log = "0.4.27"
env_logger = "0.11.8"
anstream = "=0.6.19"
dirs = "6.0.0"
gcd = "2.0.1"
rand = "0.9.2"
colorful = "0.3.2"
ansi_term = "0.12.1"
toml = "0.9.2"
serde_derive = "1.0.116"
cidr-utils = "0.6.1"
itertools = "0.14.0"
hickory-resolver = { version = "0.24.3", features = ["dns-over-rustls"] }
anyhow = "1.0.40"
text_placeholder = { version = "0.5", features = ["struct_context"] }
once_cell = "1.21.3"
num_cpus = "1.6"
pcap-sys = "0.1.3"
pktparse = { version = "0.7.1", features = ["serde"] }
nom = "7"
dns-parser = "0.8"
tls-parser = "0.12"
dhcp4r = "0.2.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["fs", "user"] }
sha2 = "0.10"
dirs-next = "2.0"
libc = "0.2"
uzers = "0.12"
bstr = { version = "1", features = ["serde"] }
data-encoding = "2.5.0"
clap_complete = "4.4.4"
httparse = "1.8.0"
libfuzzer-sys = "0.4.10"

[dev-dependencies]
parameterized = "2.0.0"
wait-timeout = "0.2"
criterion = { version = "0.6", features = ["html_reports"] }
boxxy = "0.14"

[target.'cfg(target_os="linux")'.dependencies]
syscallz = "0.17"

[package.metadata.deb]
depends = "$auto, nmap, masscan"
section = "rust"

[profile.release]
lto = true
panic = 'abort'
strip = true

[[bin]]
name = "arwah"
path = "src/main.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(tarpaulin_include)"] }

[[bench]]
name = "benchmark"
harness = false


[lib]
doc = false

[package.metadata]
cargo-fuzz = true